...

    <!--Disclaimer:-->
    <string name="disclaimer_title">Disclaimer:</string>
    <string name="disclaimer_content">myExperiment\'s Logo is nothing to do with Apache Taverna and is copyright to myExperiment</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Login</string>
    <string name="slide_2_title">Dashboard</string>
    <string name="slide_3_title">Workflow</string>
    <string name="slide_4_title">Menus</string>

...
